Revision history for Perl extension Text::CSV.

1.32
	- fix t/rt71_pp.t

1.31  Thu Jun 13 14:06:49 2013
	- fix handling UTF8 in parse method.
	- fix getline with allow_loose_quotes (rt#83705)
	- add allow_unquoted_escape
	- fix parsing escapted sep char (found in Text::CSV_XS rt#81295)

	* TODO: Updating documents and adding diag_verbose in the next version

1.30  Tue Jun 11 00:06:02 2013
	- catch up Text::CSV_XS 0.99
	    (except for diag_verbose and allow_unquoted_escape)

1.21  Mon Dec 27 12:35:35 2010
	- updated the compatibility for Text::CSV_XS version 0.80
	    * added getline_all() and getaline_hr_all()
	    * added missing test file

1.20  Wed Oct 20 13:53:59 2010
	- couldn't parse the csv containing the column starting with '0'. (hiratara)
	    * patched by hiratara
	    * enhanced getline regexp (makamaka)
	    * resolved a bug in bleadperl-fb85c04
	- added tests into t/71_pp.t (hiratara)

1.19  Sat Oct  2 14:15:59 2010
	- getline didn't work correctly with 0 or null containing lines
	    (pointed by Bernhard Prott)
	- updated the compatibility for Text::CSV_XS version 0.74
	    * real eol support for parsing streams (beyond \n, \r and \r\n)
	    * clarify doc for always_quote to not quote undef fields
	       and XS and PP incompatibility of UTF8 process for print and combine

1.18  Sat Jun 19 10:34:07 2010
	- fixed a combine bug with quote_space reported and patched by rt#58356
	- updated test files compatible to CSV_XS 0.73

1.17  Tue Mar 16 15:20:34 2010
	- fixed parse working when setting quote_char undef.
	- made Text::CSV_XS compat 0.71
	    * Text::CSV->error_diag() in void context warns instead of doing nothing
	    * auto_diag also used for new () itself
	- added quote_null (introduced in Text::CSV_XS 0.72)

1.16  Tue Dec  8 19:02:58 2009
	- updated the compatibility for Text::CSV_XS version 0.70
	    * Added quote_space attribute
	    * Forbad \r and \n in sep_char, quote_char, and escape_char

1.15  Thu Oct 15 17:23:39 2009