@@ -31,6 +31,7 @@ t/76_magic.t            array_ref from magig (useless for Text::CSV_PP)
 t/77_getall.t		gat all rows at once
 t/80_diag.t		Error diagnostics
 t/81_subclass.t		Subclassed
+t/fields_containing_0.t     Tests
 
 files/macosx.csv	A CSV files exported on MacOSX
 files/utf8.csv		A UTF-8 encode test file
